# bread-os

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  bochsrc  build.bash  build.rs  main.c  make.config.js  package.json  winbuild.ps1
.github/workflows/: build.yml
doc/: debug-with-gdb.md
include/: sys.h  util.h
kernel/: main.c  sys.c  util.c  vmem_map.c
lds/: kernel.ld
src/: lib.rs  library.cpp  library.h  print.h
src/boot/: Makefile  boot.asm  boot.cpp  efi_main.c  linker.ld
src/include/: bmalloc.h  bprint.h  bstddef.h  bstring.h  butil.h  liballoc.h  linked-list.h  sys.h  types.h  util.h  vmem_map.h
src/kernel/: bmalloc.cpp  bprint.cpp  linked-list.cpp  sys.c  util.cpp  vmem_map.c
user/: example01.c
